Switch to Lists and Collection interface in Stat class.